<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MySpaceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBonjour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:text="@string/bonjour"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPrenomUtilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/prenom_utilisateur"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvExplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:text="@string/texte_explicatif"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvLienProcessus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="?android:selectableItemBackground"
        android:onClick="onClickProcessusMySpace"
        android:padding="5dp"
        android:text="@string/processus_d_inscription"
        android:textAlignment="center"
        android:textColor="@color/bleuAdrar"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/avancement_de_mon_dossier" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:max="4"
        android:progress="1"
        android:progressTint="@color/vertInscrire" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMySpaceInscription"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/inscription"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvMySpaceInfoPerso"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_weight="0"
            android:text="@string/infos_personnelles"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvMySpaceDocuments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_weight="0"
            android:text="@string/documents"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvMySpaceInscriptionInfoCo"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="0"
            android:text="@string/inscription_info_co"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvMySpaceParticipationInfoCo"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_weight="0"
            android:text="@string/participation_info_co"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDossierValide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:paddingTop="8dp"
            android:text="@string/dossier_valide" />

        <ImageView
            android:id="@+id/ivCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_check"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_check" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMesInformations"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginEnd="40dp"
            android:background="?android:selectableItemBackground"
            android:onClick="onClickTvMesInformations"
            android:text="@string/mes_informations"
            android:textAlignment="center"
            android:textColor="@color/bleuAdrar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvMesDocuments"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:background="?android:selectableItemBackground"
            android:onClick="onClickMesDocuments"
            android:text="@string/mes_documents"
            android:textAlignment="center"
            android:textColor="@color/bleuAdrar"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvInscritInfocoMySpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:paddingRight="10dp"
        android:paddingBottom="3dp"
        android:text="@string/vous_tes_inscrit_a_cette_information_collective"
        android:textAlignment="viewStart"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvMySpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/vertClairInfiCo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDateInfocoMySpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="10dp"
                android:paddingBottom="3dp"
                android:text="@string/_date"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/tvLieuInfocoMySpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="10dp"
                android:paddingBottom="3dp"
                android:text="@string/ramonville"
                android:textAlignment="viewStart" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>