<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EspacePersoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBonjour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:text="@string/bonjour"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPrenomUtilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/prenom_utilisateur"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:text="@string/texte_explicatif"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/avancement_de_mon_dossier" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:max="4"
        android:progress="1"
        android:progressTint="@color/vertInscrire" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMySpaceInscription"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/inscription"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvMySpaceInfoPerso"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_weight="0"
            android:text="@string/infos_personnelles"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvMySpaceDocuments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_weight="0"
            android:text="@string/documents"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvMySpaceInscriptionInfoCo"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="0"
            android:text="@string/inscription_info_co"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvMySpaceParticipationInfoCo"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_weight="0"
            android:text="@string/participation_info_co"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDossierValide"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_check"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/dossier_valide" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMesInformations"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginEnd="40dp"
            android:background="?android:selectableItemBackground"
            android:onClick="onClickTvMesInformations"
            android:text="@string/mes_informations"
            android:textAlignment="center"
            android:textColor="@color/bleuAdrar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvMesDocuments"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:background="?android:selectableItemBackground"
            android:onClick="onClickMesDocuments"
            android:text="@string/mes_documents"
            android:textAlignment="center"
            android:textColor="@color/bleuAdrar"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>